[project]
name = "spotify-playlist-creator"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.42.0",
    "spotipy>=2.24.0",
    "google-genai>=1.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/spotify_playlist_creator"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.9",
]

[tool.ruff]
line-length = 100
target-version = "py311"
